HTML structure of OUR WORKS and first styling

--- a/our-works.html
+++ b/our-works.html
@@ -43,3 +43,33 @@
 		</div>
 	</header>
 	<h1 class="our-works">Наши работы</h1><hr>
+	<div class="our-works-card our-works-card-1">
+		<div class="our-works-card-container">
+			<div class="our-works-img"></div>
+			<div class="our-works-card-text"></div>
+		</div>
+	</div>
+	<div class="our-works-card our-works-card-2">
+		<div class="our-works-card-container">
+			<div class="our-works-img"></div>
+			<div class="our-works-card-text"></div>
+		</div>
+	</div>
+	<div class="our-works-card our-works-card-3">
+		<div class="our-works-card-container">
+			<div class="our-works-img"></div>
+			<div class="our-works-card-text"></div>
+		</div>
+	</div>
+	<div class="our-works-card our-works-card-4">
+		<div class="our-works-card-container">
+			<div class="our-works-img"></div>
+			<div class="our-works-card-text"></div>
+		</div>
+	</div>
+	<div class="our-works-card our-works-card-5">
+		<div class="our-works-card-container">
+			<div class="our-works-img"></div>
+			<div class="our-works-card-text"></div>
+		</div>
+	</div>
