add blog posts, ad banner

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
-	<title>Технология покраски | Заказать покраску сруба</title>
+	<title>Технология покраски | Наш блог</title>
 	<meta name="description" content="сайт компании Технологии Покраски. Мы занимаемся покраской деревянных поверхностей различного типа, а также сопутствующими работами по дереву.">
 	<meta name="keywords" content="покраска коттеджа, заказать покраску коттеджа, покраска сруба, заказать покрасу сруба, покраска сруба на заказ"></head>
 <body class="body">
@@ -23,23 +23,51 @@
 			</div>
 			<nav class="navigation">
 				<ul class="navigation-list">
+					<a href="index.html">
 					<li class="nav-button">
-						<a href="index.html">Главная</a>
-					</li>
+						<span>Главная</span>
+					</li></a>
+					<a href="our-works.html">
 					<li class="nav-button">
-						<a href="our-works.html">Наши работы</a>
-					</li>
-					<li class="nav-button selected">
-						<a href="blog.html">Блог</a>
-					</li>
+						<span>Наши работы</span>
+					</li></a>
+					<a href="blog.html">
+					<li class="nav-button  selected">
+						<span>Блог</span>
+											</li></a>
+											<a href="job-offers.html">
 					<li class="nav-button">
-						<a href="job-offers.html">Вакансии</a>
-					</li>
+						<span>Вакансии</span>
+					</li></a>
+					<a href="contact.html">
 					<li class="nav-button">
-						<a href="contact.html">Контакты</a>
-					</li>
+						<span>Контакты</span>
+					</li></a>
 				</ul>
 			</nav>
 		</div>
-
 	</header>
+	<div class="content">
+		<article class="post post-1">
+			<h1>Какие инструменты нужны для покраски?</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero ipsa magni eius deserunt corporis quam, pariatur asperiores iusto. Omnis nostrum illo aperiam, reiciendis, quo similique cumque nesciunt dolorem consequatur nihil?Mollitia asperiores ex iure, minus excepturi reiciendis ad error aliquid dolore ab maxime harum itaque quidem omnis autem, aliquam iusto, perspiciatis possimus. A veritatis provident deserunt eveniet earum, magnam ut.</p>
+			<a href="kakoe-nuzhno-oborudovanie.html"><span>Читать</span></a>
+		</article>
+		<article class="post post-2">
+			<h1>Как правильно подобрать краску?</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis incidunt eaque voluptatum quos cum at, aperiam corrupti libero suscipit velit ab ratione enim, culpa autem eveniet, consectetur vitae pariatur ipsa.Libero nemo provident placeat, eaque aliquid similique inventore aliquam ad doloremque nobis! Explicabo nulla dolores minus rerum, consequatur soluta ipsa officiis vitae deserunt illum, placeat voluptas reprehenderit, hic porro itaque.</p>
+			<a href="kak-podobrat-cvet.html"><span>Читать</span></a>
+		</article>
+		<article class="post post-3">
+			<h1>Наш первый пост!</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio voluptatibus, voluptate ex ad sunt fugiat vitae facilis iusto nemo assumenda, quas, atque cumque a veniam, officia ipsa commodi quia exercitationem!Ducimus reiciendis fuga sit amet quibusdam suscipit omnis optio, soluta aperiam ad cum, doloribus ipsam aut impedit ea maxime fugiat non nostrum nisi placeat? Officia maiores minima voluptate vitae, nam.</p>
+			<a href="perviy-post.html"><span>Читать</span></a>
+		</article>
+	</div>
+
+	<footer>
+		<p class="copyright">Технологии Покраски &copy; 2016</p>
+		<p class="tel">+7(925)720-70-70</p>
+	</footer>
+</body>
+</html>
