--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="description">
 				<p class="question">Нужно качественно покрасить дерево? Звоните!</p>
 				<p class="telephone-code">+7(925)</p>
-				<p class="telephone-main">720-70-70</p>
+					<a class="telephone-skype" href="tel:+79257207070"><p class="telephone-main">720-70-70</p></a>
 				<p class="description-content">"Технология Покраски"является одним из лидеров на рынке профессиональных услуг покраски деревянных срубов и другиз объектов из дерева. На счету компании имеется большое количество выполненных заказов, с некоторыми из которых Вы можете ознакомиться на сайте. Мы всегда стараемся максимально эффективно выполнить свою работу и поэтому используем только передовые технологии, а наши рабочие проходят длительную подготовку опытных наставников</p>
 			</div>
 			<div class="worker">
@@ -23,21 +23,26 @@
 			</div>
 			<nav class="navigation">
 				<ul class="navigation-list">
+						<a href="index.html">
 					<li class="nav-button selected">
-						<a href="">Главная</a>
-					</li>
+						<span>Главная</span>
+					</li></a>
+					<a href="our-works.html">
 					<li class="nav-button">
-						<a href="our-works.html">Наши работы</a>
-					</li>
+						<span>Наши работы</span>
+					</li></a>
+					<a href="blog.html">
 					<li class="nav-button">
-						<a href="blog.html">Блог</a>
-					</li>
+						<span>Блог</span>
+											</li></a>
+											<a href="job-offers.html">
 					<li class="nav-button">
-						<a href="job-offers.html">Вакансии</a>
-					</li>
+						<span>Вакансии</span>
+					</li></a>
+					<a href="contact.html">
 					<li class="nav-button">
-						<a href="contact.html">Контакты</a>
-					</li>
+						<span>Контакты</span>
+					</li></a>
 				</ul>
 			</nav>
 		</div>
@@ -71,7 +76,7 @@
 	<div class="latest-works-pic latest-works-pic-1"></div>
 	<div class="latest-works-pic latest-works-pic-2"></div>
 	<div class="latest-works-pic latest-works-pic-3"></div>
-	<div class="latest-works-button"><span>Все работы</span></div></div>
+	<div class="latest-works-button"><a href="our-works.html"><span>Все работы</span></a></div></div>
 	</div>
 	<footer>
 		<p class="copyright">Технологии Покраски &copy; 2016</p>
