--- a/job-offers.html
+++ b/job-offers.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
-	<title>Технология покраски | Заказать покраску сруба</title>
+	<title>Технология покраски | Вакансии</title>
 	<meta name="description" content="сайт компании Технологии Покраски. Мы занимаемся покраской деревянных поверхностей различного типа, а также сопутствующими работами по дереву.">
 	<meta name="keywords" content="покраска коттеджа, заказать покраску коттеджа, покраска сруба, заказать покрасу сруба, покраска сруба на заказ"></head>
 <body class="body">
@@ -23,23 +23,24 @@
 			</div>
 			<nav class="navigation">
 				<ul class="navigation-list">
-					<li class="nav-button">
-						<a href="index.html">Главная</a>
-					</li>
-					<li class="nav-button">
-						<a href="our-works.html">Наши работы</a>
-					</li>
-					<li class="nav-button">
-						<a href="blog.html">Блог</a>
-					</li>
-					<li class="nav-button selected">
-						<a href="job-offers.html">Вакансии</a>
-					</li>
-					<li class="nav-button">
-						<a href="contact.html">Контакты</a>
-					</li>
+				<a href="index.html">
+					<li class="nav-button"><span>Главная</span></li></a>
+					<a href="our-works.html">
+					<li class="nav-button"><span>Наши работы</span></li></a>
+					<a href="blog.html">
+					<li class="nav-button"><span>Блог</span></li></a>
+					<a href="job-offers.html">
+					<li class="nav-button  selected"><span>Вакансии</span></li></a>
+					<a href="contact.html">
+					<li class="nav-button"><span>Контакты</span></li></a>
 				</ul>
 			</nav>
 		</div>
-
 	</header>
+	<div class="animated-add"><img src="img/animated-ad-job-offer.gif" alt=""></div>
+	<footer>
+		<p class="copyright">Технологии Покраски &copy; 2016</p>
+		<p class="tel">+7(925)720-70-70</p>
+	</footer>
+</body>
+</html>
