--- a/our-works.html
+++ b/our-works.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
-	<title>Технология покраски | Заказать покраску сруба</title>
+	<title>Технология покраски | Наши выполненные заказы</title>
 	<meta name="description" content="сайт компании Технологии Покраски. Мы занимаемся покраской деревянных поверхностей различного типа, а также сопутствующими работами по дереву.">
 	<meta name="keywords" content="покраска коттеджа, заказать покраску коттеджа, покраска сруба, заказать покрасу сруба, покраска сруба на заказ"></head>
 <body class="body">
@@ -23,53 +23,59 @@
 			</div>
 			<nav class="navigation">
 				<ul class="navigation-list">
+					<a href="index.html">
 					<li class="nav-button">
-						<a href="index.html">Главная</a>
-					</li>
-					<li class="nav-button selected">
-						<a href="our-works.html">Наши работы</a>
-					</li>
+						<span>Главная</span>
+					</li></a>
+					<a href="our-works.html">
+					<li class="nav-button  selected">
+						<span>Наши работы</span>
+					</li></a>
+					<a href="blog.html">
 					<li class="nav-button">
-						<a href="blog.html">Блог</a>
-					</li>
+						<span>Блог</span>
+											</li></a>
+											<a href="job-offers.html">
 					<li class="nav-button">
-						<a href="job-offers.html">Вакансии</a>
-					</li>
+						<span>Вакансии</span>
+					</li></a>
+					<a href="contact.html">
 					<li class="nav-button">
-						<a href="contact.html">Контакты</a>
-					</li>
+						<span>Контакты</span>
+					</li></a>
 				</ul>
 			</nav>
 		</div>
 	</header>
-	<h1 class="our-works">Наши работы</h1><hr>
+	<h1 class="our-works">Наши работы</h1><hr><br>
 	<div class="our-works-card our-works-card-1">
-		<div class="our-works-card-container">
-			<div class="our-works-img"></div>
-			<div class="our-works-card-text"></div>
+			<div class="our-works-img our-works-img-1"></div>
+			<div class="our-works-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est voluptatibus architecto officia delectus ratione aspernatur, reprehenderit, aperiam mollitia? Perspiciatis nihil, fugit blanditiis, voluptatibus neque doloremque facere accusamus iure dolore autem.Iusto commodi neque quia nam est. Ipsa, placeat sequi laborum repudiandae officiis velit nesciunt veritatis autem incidunt at minima, voluptatum cum libero debitis dolore, similique, vitae! Reiciendis ipsum, libero hic?</div>
 		</div>
 	</div>
 	<div class="our-works-card our-works-card-2">
-		<div class="our-works-card-container">
-			<div class="our-works-img"></div>
-			<div class="our-works-card-text"></div>
+			<div class="our-works-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, repellat? Deleniti animi numquam sunt quas qui. Placeat voluptates doloribus nisi hic consectetur assumenda exercitationem, dignissimos tenetur ullam. Incidunt, accusamus, veniam.Neque quae deserunt aliquid inventore, ex maiores. Eius facere distinctio molestiae sed corporis voluptatum aspernatur cupiditate doloribus adipisci laborum, repellat. Labore delectus placeat voluptates amet debitis, eos, dolores optio modi?</div>
+				<div class="our-works-img our-works-img-2"></div>
 		</div>
 	</div>
 	<div class="our-works-card our-works-card-3">
-		<div class="our-works-card-container">
-			<div class="our-works-img"></div>
-			<div class="our-works-card-text"></div>
+			<div class="our-works-img our-works-img-3"></div>
+			<div class="our-works-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam repudiandae excepturi recusandae totam ratione quia consectetur. Fugit labore tenetur, porro obcaecati non et, sit consectetur sint facilis iure debitis explicabo.Error nam sequi maxime pariatur minus, culpa doloribus ut veritatis, est cumque tempore eaque fugit modi, molestias perferendis obcaecati beatae vitae. Odio tempora, veritatis earum unde ducimus fuga impedit. Dolorem!</div>
 		</div>
 	</div>
 	<div class="our-works-card our-works-card-4">
-		<div class="our-works-card-container">
-			<div class="our-works-img"></div>
-			<div class="our-works-card-text"></div>
+			<div class="our-works-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium exercitationem quisquam velit itaque perferendis reiciendis ipsum minus tempora impedit sequi, sit ea optio ipsam laborum iusto sint voluptas, corrupti incidunt!Laborum dolorum placeat iusto earum cumque aliquid quos iure culpa tenetur qui id nesciunt nam pariatur impedit recusandae asperiores a velit necessitatibus, autem, commodi dolores. Ex aliquid nisi facere voluptatum.</div>
+				<div class="our-works-img our-works-img-4"></div>
 		</div>
 	</div>
 	<div class="our-works-card our-works-card-5">
-		<div class="our-works-card-container">
-			<div class="our-works-img"></div>
-			<div class="our-works-card-text"></div>
+			<div class="our-works-img our-works-img-5"></div>
+			<div class="our-works-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam saepe reprehenderit ea corrupti quis accusantium impedit, commodi et beatae sed, deserunt ipsa, modi aliquid nam id architecto ipsum sequi minima!Consequuntur, cum distinctio iure! Ratione, pariatur. Dignissimos, nam, consectetur. Nesciunt modi corporis libero, quibusdam, rerum tempora sint odit exercitationem facere velit necessitatibus eaque ipsam doloremque nemo perferendis. Iste, delectus, minus.</div>
 		</div>
 	</div>
+	<footer>
+		<p class="copyright">Технологии Покраски &copy; 2016</p>
+		<p class="tel">+7(925)720-70-70</p>
+	</footer>
+</body>
+</html>
